--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@storybook/react": "^5.2.8",
+    "apollo-link": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-http": "^1.5.17",
     "nanoid": "^2.1.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-live-clock": "^3.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^4.4.1",
     "webfontloader": "^1.6.28"
   },
